# pgsql-mcp-server

./: .gitignore  README.md  README_zh.md  log.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
.qlty/: qlty.toml
src/pgsql_mcp_server/: app.py
tests/: test_app.py  test_integration.py
