[project]
name = "pgsql-mcp-server"
version = "1.3.3"
description = "PostgreSQL MCP Server"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "mcp", "postgresql", "pgsql", "mcp-server", "pgsql-mcp-server"]

authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
maintainers = [
    { name = "curry tang", email = "twn39@163.com" }
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "asyncpg>=0.30.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "sqlalchemy[asyncio]>=2.0.41",
    "tabulate>=0.9.0",
    "h11>=0.16.0",
    "pip>=25.2",
]

[project.urls]
"Homepage" = "https://github.com/twn39/pgsql-mcp-server"
"Documentation" = "https://github.com/twn39/pgsql-mcp-server"
"Repository" = "https://github.com/twn39/pgsql-mcp-server"
"Source Code" = "https://github.com/twn39/pgsql-mcp-server"


[project.scripts]
pgsql-mcp-server = "pgsql_mcp_server.app:serve"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
