[project]
name = "pgsql-mcp-server"
version = "1.4.5"
description = "PostgreSQL MCP Server"
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["ai", "mcp", "postgresql", "pgsql", "mcp-server", "pgsql-mcp-server"]

authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
maintainers = [
    { name = "curry tang", email = "twn39@163.com" }
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

license = { text = "MIT" }
dependencies = [
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.46",
    "tabulate>=0.9.0",
    "h11>=0.16.0",
    "starlette>=0.52.1",
    "python-multipart>=0.0.22",
]

[project.urls]
"Homepage" = "https://github.com/twn39/pgsql-mcp-server"
"Documentation" = "https://github.com/twn39/pgsql-mcp-server"
"Repository" = "https://github.com/twn39/pgsql-mcp-server"
"Source Code" = "https://github.com/twn39/pgsql-mcp-server"

[project.scripts]
pgsql-mcp-server = "pgsql_mcp_server.app:serve"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.1",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "Q"]
ignore = []

[tool.coverage.run]
source = ["src/pgsql_mcp_server"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
